added unregister api
