# functions/routes/user.js
@@ -1,4 +1,4 @@
-const { getRegisteredEvents, eventRegister, appGetRegisteredEvents, appEventRegister } = require('../controllers/events');
+const { getRegisteredEvents, eventRegister,eventUnregister, appGetRegisteredEvents, appEventRegister } = require('../controllers/events');
 const { googleLogin, signUp, signUpApp, googleLoginApp, addQuery } = require('../controllers/user');
 
 const { isLoggedIn } = require('../middlewares/user');
@@ -17,6 +17,8 @@ router.post("/query", isLoggedIn, addQuery);
 
 router.get("/user/event", isLoggedIn, getRegisteredEvents);
 router.put("/user/event", isLoggedIn, eventRegister);
+router.put("/user/event/unregister", isLoggedIn, eventUnregister);
+
 // for app registartion
 router.get("/user/eventApp", appGetRegisteredEvents, getRegisteredEvents);
 router.put("/user/eventApp", appEventRegister, eventRegister);
